--- a/Bootstrap4/conFusion/package.json
+++ b/Bootstrap4/conFusion/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "grunt": "^1.1.0",
     "lite-server": "^2.3.0",
     "node-sass": "^4.14.1"
   },
@@ -19,7 +20,12 @@
     "bootstrap": "^4.5.0",
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
+    "grunt-browser-sync": "^2.2.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-sass": "^2.1.0",
+    "jit-grunt": "^0.10.0",
     "jquery": "^3.5.1",
-    "popper.js": "^1.12.9"
+    "popper.js": "^1.12.9",
+    "time-grunt": "^1.4.0"
   }
 }
